fix: implementacion de faq category y faq, ambas con abm completa
